parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID COLON globales metodos goto_main
Rule 2     goto_main -> VOID MAIN scopemain LEFTP RIGHTP LEFTB declara_var bloque RIGHTB
Rule 3     scopemain -> empty
Rule 4     globales -> declara_var
Rule 5     declara_var -> empty
Rule 6     declara_var -> variables
Rule 7     variables -> VAR tipo var lista_variables SEMICOLON declara_var
Rule 8     lista_variables -> COMMA var lista_variables
Rule 9     lista_variables -> empty
Rule 10    var -> ID
Rule 11    var -> ID LEFTSB INT_CTE RIGHTSB
Rule 12    metodos -> metodo metodos
Rule 13    metodos -> empty
Rule 14    metodo -> METHOD tipo_metodo ID inicio_method LEFTP params RIGHTP LEFTB method_vars bloque RIGHTB end_method
Rule 15    inicio_method -> empty
Rule 16    end_method -> empty
Rule 17    tipo_metodo -> VOID
Rule 18    tipo_metodo -> tipo
Rule 19    params -> empty
Rule 20    params -> parametro paraux
Rule 21    paraux -> empty
Rule 22    paraux -> COMMA parametro paraux
Rule 23    parametro -> tipo ID
Rule 24    method_vars -> declara_var
Rule 25    bloque -> estatuto bloque
Rule 26    bloque -> empty
Rule 27    tipo -> INT
Rule 28    tipo -> CHAR
Rule 29    tipo -> BOOLEAN
Rule 30    tipo -> FLOAT
Rule 31    tipo -> STRING
Rule 32    estatuto -> condicion
Rule 33    estatuto -> ciclo
Rule 34    estatuto -> return
Rule 35    estatuto -> lectura
Rule 36    estatuto -> escritura
Rule 37    estatuto -> llamada SEMICOLON
Rule 38    estatuto -> asignacion
Rule 39    estatuto -> dibujaPunto
Rule 40    estatuto -> dibujaLinea
Rule 41    estatuto -> dibujaCirculo
Rule 42    estatuto -> dibujaTriangulo
Rule 43    estatuto -> dibujaCuadrado
Rule 44    estatuto -> dibujaRectangulo
Rule 45    estatuto -> dibujaCuadrilatero
Rule 46    return -> RETURN exp SEMICOLON
Rule 47    lectura -> ID ASSIGN READ LEFTP RIGHTP SEMICOLON
Rule 48    escritura -> PRINT LEFTP exp RIGHTP SEMICOLON
Rule 49    llamada -> ID llamafun LEFTP args RIGHTP
Rule 50    llamafun -> empty
Rule 51    args -> exp param listargs
Rule 52    args -> empty
Rule 53    listargs -> COMMA args
Rule 54    listargs -> empty
Rule 55    param -> empty
Rule 56    asignacion -> ID asigarray
Rule 57    asigarray -> LEFTSB exp RIGHTSB asign
Rule 58    asigarray -> asign
Rule 59    asign -> ASSIGN exp SEMICOLON
Rule 60    ciclo -> WHILE salto_ciclo LEFTP exp ciclo1 RIGHTP LEFTB bloque ciclo2 RIGHTB
Rule 61    salto_ciclo -> empty
Rule 62    ciclo1 -> empty
Rule 63    ciclo2 -> empty
Rule 64    condicion -> IF LEFTP condicion1 RIGHTP LEFTB bloque RIGHTB else
Rule 65    else -> ELSE condicion3 LEFTB bloque condicion4 RIGHTB
Rule 66    else -> empty
Rule 67    condicion1 -> exp
Rule 68    condicion3 -> empty
Rule 69    condicion4 -> empty
Rule 70    exp -> llamada
Rule 71    exp -> expresion
Rule 72    expresion -> operador1 exp1
Rule 73    exp1 -> empty
Rule 74    exp1 -> AND saveop operador1 exp1
Rule 75    exp1 -> OR saveop operador1 exp1
Rule 76    operador1 -> operador2 exp2
Rule 77    exp2 -> empty
Rule 78    exp2 -> EQUALS saveop operador2 exp2
Rule 79    exp2 -> NOTEQUAL saveop operador2 exp2
Rule 80    exp2 -> GREATEREQUAL saveop operador2 exp2
Rule 81    exp2 -> GREATERTHAN saveop operador2 exp2
Rule 82    exp2 -> LESSTHAN saveop operador2 exp2
Rule 83    exp2 -> LESSEQUAL saveop operador2 exp2
Rule 84    operador2 -> operador3 exp3
Rule 85    exp3 -> empty
Rule 86    exp3 -> SUM saveop operador3 exp3
Rule 87    exp3 -> LESS saveop operador3 exp3
Rule 88    operador3 -> operador4 exp4
Rule 89    exp4 -> empty
Rule 90    exp4 -> TIMES saveop operador4 exp4
Rule 91    exp4 -> DIVISION saveop operador4 exp4
Rule 92    saveop -> empty
Rule 93    operador4 -> ID idarray
Rule 94    idarray -> LEFTSB fondofalso expresion RIGHTSB
Rule 95    idarray -> empty
Rule 96    operador4 -> constante
Rule 97    operador4 -> LEFTP fondofalso expresion RIGHTP
Rule 98    fondofalso -> empty
Rule 99    constante -> INT_CTE
Rule 100   constante -> FLOAT_CTE
Rule 101   constante -> CHAR_CTE
Rule 102   constante -> STRING_CTE
Rule 103   constante -> TRUE
Rule 104   constante -> FALSE
Rule 105   dibujaPunto -> DRAW_DOT LEFTP exp COMMA exp COMMA color RIGHTP SEMICOLON
Rule 106   dibujaLinea -> DRAW_LINE LEFTP exp COMMA exp COMMA exp COMMA exp COMMA exp COMMA color RIGHTP SEMICOLON
Rule 107   dibujaCirculo -> DRAW_CIRCLE LEFTP exp COMMA exp COMMA exp COMMA exp COMMA color RIGHTP SEMICOLON
Rule 108   dibujaTriangulo -> DRAW_TRIANGLE LEFTP exp COMMA exp COMMA exp COMMA exp COMMA exp COMMA exp COMMA exp COMMA color RIGHTP SEMICOLON
Rule 109   dibujaCuadrado -> DRAW_SQUARE LEFTP exp COMMA exp COMMA exp COMMA exp COMMA color RIGHTP SEMICOLON
Rule 110   dibujaRectangulo -> DRAW_RECTANGLE LEFTP exp COMMA exp COMMA exp COMMA exp COMMA exp COMMA color RIGHTP SEMICOLON
Rule 111   dibujaCuadrilatero -> DRAW_QUADRITERAL LEFTP exp COMMA exp COMMA exp COMMA exp COMMA exp COMMA exp COMMA exp COMMA exp COMMA exp COMMA color RIGHTP SEMICOLON
Rule 112   color -> RED
Rule 113   color -> BLUE
Rule 114   color -> YELLOW
Rule 115   color -> PURPLE
Rule 116   color -> GREEN
Rule 117   color -> BLACK
Rule 118   color -> CYAN
Rule 119   color -> WHITE
Rule 120   color -> FG
Rule 121   color -> AW4
Rule 122   color -> MB
Rule 123   color -> SNOW
Rule 124   color -> LY
Rule 125   empty -> <empty>

Terminals, with rules where they appear

AND                  : 74
ASSIGN               : 47 59
AW4                  : 121
BLACK                : 117
BLUE                 : 113
BOOLEAN              : 29
CHAR                 : 28
CHAR_CTE             : 101
COLON                : 1
COMMA                : 8 22 53 105 105 106 106 106 106 106 107 107 107 107 108 108 108 108 108 108 108 109 109 109 109 110 110 110 110 110 111 111 111 111 111 111 111 111 111
CYAN                 : 118
DIVISION             : 91
DRAW_CIRCLE          : 107
DRAW_DOT             : 105
DRAW_LINE            : 106
DRAW_QUADRITERAL     : 111
DRAW_RECTANGLE       : 110
DRAW_SQUARE          : 109
DRAW_TRIANGLE        : 108
ELSE                 : 65
EQUALS               : 78
FALSE                : 104
FG                   : 120
FLOAT                : 30
FLOAT_CTE            : 100
GREATEREQUAL         : 80
GREATERTHAN          : 81
GREEN                : 116
ID                   : 1 10 11 14 23 47 49 56 93
IF                   : 64
INT                  : 27
INT_CTE              : 11 99
LEFTB                : 2 14 60 64 65
LEFTP                : 2 14 47 48 49 60 64 97 105 106 107 108 109 110 111
LEFTSB               : 11 57 94
LESS                 : 87
LESSEQUAL            : 83
LESSTHAN             : 82
LY                   : 124
MAIN                 : 2
MB                   : 122
METHOD               : 14
NOTEQUAL             : 79
OR                   : 75
PRINT                : 48
PROGRAM              : 1
PURPLE               : 115
READ                 : 47
RED                  : 112
RETURN               : 46
RIGHTB               : 2 14 60 64 65
RIGHTP               : 2 14 47 48 49 60 64 97 105 106 107 108 109 110 111
RIGHTSB              : 11 57 94
SEMICOLON            : 7 37 46 47 48 59 105 106 107 108 109 110 111
SNOW                 : 123
STRING               : 31
STRING_CTE           : 102
SUM                  : 86
TIMES                : 90
TRUE                 : 103
VAR                  : 7
VOID                 : 2 17
WHILE                : 60
WHITE                : 119
YELLOW               : 114
error                : 

Nonterminals, with rules where they appear

args                 : 49 53
asigarray            : 56
asign                : 57 58
asignacion           : 38
bloque               : 2 14 25 60 64 65
ciclo                : 33
ciclo1               : 60
ciclo2               : 60
color                : 105 106 107 108 109 110 111
condicion            : 32
condicion1           : 64
condicion3           : 65
condicion4           : 65
constante            : 96
declara_var          : 2 4 7 24
dibujaCirculo        : 41
dibujaCuadrado       : 43
dibujaCuadrilatero   : 45
dibujaLinea          : 40
dibujaPunto          : 39
dibujaRectangulo     : 44
dibujaTriangulo      : 42
else                 : 64
empty                : 3 5 9 13 15 16 19 21 26 50 52 54 55 61 62 63 66 68 69 73 77 85 89 92 95 98
end_method           : 14
escritura            : 36
estatuto             : 25
exp                  : 46 48 51 57 59 60 67 105 105 106 106 106 106 106 107 107 107 107 108 108 108 108 108 108 108 109 109 109 109 110 110 110 110 110 111 111 111 111 111 111 111 111 111
exp1                 : 72 74 75
exp2                 : 76 78 79 80 81 82 83
exp3                 : 84 86 87
exp4                 : 88 90 91
expresion            : 71 94 97
fondofalso           : 94 97
globales             : 1
goto_main            : 1
idarray              : 93
inicio_method        : 14
lectura              : 35
lista_variables      : 7 8
listargs             : 51
llamada              : 37 70
llamafun             : 49
method_vars          : 14
metodo               : 12
metodos              : 1 12
operador1            : 72 74 75
operador2            : 76 78 79 80 81 82 83
operador3            : 84 86 87
operador4            : 88 90 91
param                : 51
parametro            : 20 22
params               : 14
paraux               : 20 22
programa             : 0
return               : 34
salto_ciclo          : 60
saveop               : 74 75 78 79 80 81 82 83 86 87 90 91
scopemain            : 2
tipo                 : 7 18 23
tipo_metodo          : 14
var                  : 7 8
variables            : 6

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID COLON globales metodos goto_main

    PROGRAM         shift and go to state 1

    programa                       shift and go to state 2

state 1

    (1) programa -> PROGRAM . ID COLON globales metodos goto_main

    ID              shift and go to state 3


state 2

    (0) S' -> programa .



state 3

    (1) programa -> PROGRAM ID . COLON globales metodos goto_main

    COLON           shift and go to state 4


state 4

    (1) programa -> PROGRAM ID COLON . globales metodos goto_main
    (4) globales -> . declara_var
    (5) declara_var -> . empty
    (6) declara_var -> . variables
    (125) empty -> .
    (7) variables -> . VAR tipo var lista_variables SEMICOLON declara_var

    METHOD          reduce using rule 125 (empty -> .)
    VOID            reduce using rule 125 (empty -> .)
    VAR             shift and go to state 8

    declara_var                    shift and go to state 5
    variables                      shift and go to state 6
    globales                       shift and go to state 7
    empty                          shift and go to state 9

state 5

    (4) globales -> declara_var .

    METHOD          reduce using rule 4 (globales -> declara_var .)
    VOID            reduce using rule 4 (globales -> declara_var .)


state 6

    (6) declara_var -> variables .

    METHOD          reduce using rule 6 (declara_var -> variables .)
    VOID            reduce using rule 6 (declara_var -> variables .)
    IF              reduce using rule 6 (declara_var -> variables .)
    WHILE           reduce using rule 6 (declara_var -> variables .)
    RETURN          reduce using rule 6 (declara_var -> variables .)
    ID              reduce using rule 6 (declara_var -> variables .)
    PRINT           reduce using rule 6 (declara_var -> variables .)
    DRAW_DOT        reduce using rule 6 (declara_var -> variables .)
    DRAW_LINE       reduce using rule 6 (declara_var -> variables .)
    DRAW_CIRCLE     reduce using rule 6 (declara_var -> variables .)
    DRAW_TRIANGLE   reduce using rule 6 (declara_var -> variables .)
    DRAW_SQUARE     reduce using rule 6 (declara_var -> variables .)
    DRAW_RECTANGLE  reduce using rule 6 (declara_var -> variables .)
    DRAW_QUADRITERAL reduce using rule 6 (declara_var -> variables .)
    RIGHTB          reduce using rule 6 (declara_var -> variables .)


state 7

    (1) programa -> PROGRAM ID COLON globales . metodos goto_main
    (12) metodos -> . metodo metodos
    (13) metodos -> . empty
    (14) metodo -> . METHOD tipo_metodo ID inicio_method LEFTP params RIGHTP LEFTB method_vars bloque RIGHTB end_method
    (125) empty -> .

    METHOD          shift and go to state 11
    VOID            reduce using rule 125 (empty -> .)

    metodo                         shift and go to state 10
    metodos                        shift and go to state 12
    empty                          shift and go to state 13

state 8

    (7) variables -> VAR . tipo var lista_variables SEMICOLON declara_var
    (27) tipo -> . INT
    (28) tipo -> . CHAR
    (29) tipo -> . BOOLEAN
    (30) tipo -> . FLOAT
    (31) tipo -> . STRING

    INT             shift and go to state 15
    CHAR            shift and go to state 17
    BOOLEAN         shift and go to state 18
    FLOAT           shift and go to state 16
    STRING          shift and go to state 19

    tipo                           shift and go to state 14

state 9

    (5) declara_var -> empty .

    METHOD          reduce using rule 5 (declara_var -> empty .)
    VOID            reduce using rule 5 (declara_var -> empty .)
    IF              reduce using rule 5 (declara_var -> empty .)
    WHILE           reduce using rule 5 (declara_var -> empty .)
    RETURN          reduce using rule 5 (declara_var -> empty .)
    ID              reduce using rule 5 (declara_var -> empty .)
    PRINT           reduce using rule 5 (declara_var -> empty .)
    DRAW_DOT        reduce using rule 5 (declara_var -> empty .)
    DRAW_LINE       reduce using rule 5 (declara_var -> empty .)
    DRAW_CIRCLE     reduce using rule 5 (declara_var -> empty .)
    DRAW_TRIANGLE   reduce using rule 5 (declara_var -> empty .)
    DRAW_SQUARE     reduce using rule 5 (declara_var -> empty .)
    DRAW_RECTANGLE  reduce using rule 5 (declara_var -> empty .)
    DRAW_QUADRITERAL reduce using rule 5 (declara_var -> empty .)
    RIGHTB          reduce using rule 5 (declara_var -> empty .)


state 10

    (12) metodos -> metodo . metodos
    (12) metodos -> . metodo metodos
    (13) metodos -> . empty
    (14) metodo -> . METHOD tipo_metodo ID inicio_method LEFTP params RIGHTP LEFTB method_vars bloque RIGHTB end_method
    (125) empty -> .

    METHOD          shift and go to state 11
    VOID            reduce using rule 125 (empty -> .)

    metodo                         shift and go to state 10
    metodos                        shift and go to state 20
    empty                          shift and go to state 13

state 11

    (14) metodo -> METHOD . tipo_metodo ID inicio_method LEFTP params RIGHTP LEFTB method_vars bloque RIGHTB end_method
    (17) tipo_metodo -> . VOID
    (18) tipo_metodo -> . tipo
    (27) tipo -> . INT
    (28) tipo -> . CHAR
    (29) tipo -> . BOOLEAN
    (30) tipo -> . FLOAT
    (31) tipo -> . STRING

    VOID            shift and go to state 22
    INT             shift and go to state 15
    CHAR            shift and go to state 17
    BOOLEAN         shift and go to state 18
    FLOAT           shift and go to state 16
    STRING          shift and go to state 19

    tipo                           shift and go to state 21
    tipo_metodo                    shift and go to state 23

state 12

    (1) programa -> PROGRAM ID COLON globales metodos . goto_main
    (2) goto_main -> . VOID MAIN scopemain LEFTP RIGHTP LEFTB declara_var bloque RIGHTB

    VOID            shift and go to state 25

    goto_main                      shift and go to state 24

state 13

    (13) metodos -> empty .

    VOID            reduce using rule 13 (metodos -> empty .)


state 14

    (7) variables -> VAR tipo . var lista_variables SEMICOLON declara_var
    (10) var -> . ID
    (11) var -> . ID LEFTSB INT_CTE RIGHTSB

    ID              shift and go to state 27

    var                            shift and go to state 26

state 15

    (27) tipo -> INT .

    ID              reduce using rule 27 (tipo -> INT .)


state 16

    (30) tipo -> FLOAT .

    ID              reduce using rule 30 (tipo -> FLOAT .)


state 17

    (28) tipo -> CHAR .

    ID              reduce using rule 28 (tipo -> CHAR .)


state 18

    (29) tipo -> BOOLEAN .

    ID              reduce using rule 29 (tipo -> BOOLEAN .)


state 19

    (31) tipo -> STRING .

    ID              reduce using rule 31 (tipo -> STRING .)


state 20

    (12) metodos -> metodo metodos .

    VOID            reduce using rule 12 (metodos -> metodo metodos .)


state 21

    (18) tipo_metodo -> tipo .

    ID              reduce using rule 18 (tipo_metodo -> tipo .)


state 22

    (17) tipo_metodo -> VOID .

    ID              reduce using rule 17 (tipo_metodo -> VOID .)


state 23

    (14) metodo -> METHOD tipo_metodo . ID inicio_method LEFTP params RIGHTP LEFTB method_vars bloque RIGHTB end_method

    ID              shift and go to state 28


state 24

    (1) programa -> PROGRAM ID COLON globales metodos goto_main .

    $end            reduce using rule 1 (programa -> PROGRAM ID COLON globales metodos goto_main .)


state 25

    (2) goto_main -> VOID . MAIN scopemain LEFTP RIGHTP LEFTB declara_var bloque RIGHTB

    MAIN            shift and go to state 29


state 26

    (7) variables -> VAR tipo var . lista_variables SEMICOLON declara_var
    (8) lista_variables -> . COMMA var lista_variables
    (9) lista_variables -> . empty
    (125) empty -> .

    COMMA           shift and go to state 31
    SEMICOLON       reduce using rule 125 (empty -> .)

    lista_variables                shift and go to state 30
    empty                          shift and go to state 32

state 27

    (10) var -> ID .
    (11) var -> ID . LEFTSB INT_CTE RIGHTSB

    COMMA           reduce using rule 10 (var -> ID .)
    SEMICOLON       reduce using rule 10 (var -> ID .)
    LEFTSB          shift and go to state 33


state 28

    (14) metodo -> METHOD tipo_metodo ID . inicio_method LEFTP params RIGHTP LEFTB method_vars bloque RIGHTB end_method
    (15) inicio_method -> . empty
    (125) empty -> .

    LEFTP           reduce using rule 125 (empty -> .)

    inicio_method                  shift and go to state 34
    empty                          shift and go to state 35

state 29

    (2) goto_main -> VOID MAIN . scopemain LEFTP RIGHTP LEFTB declara_var bloque RIGHTB
    (3) scopemain -> . empty
    (125) empty -> .

    LEFTP           reduce using rule 125 (empty -> .)

    scopemain                      shift and go to state 36
    empty                          shift and go to state 37

state 30

    (7) variables -> VAR tipo var lista_variables . SEMICOLON declara_var

    SEMICOLON       shift and go to state 38


state 31

    (8) lista_variables -> COMMA . var lista_variables
    (10) var -> . ID
    (11) var -> . ID LEFTSB INT_CTE RIGHTSB

    ID              shift and go to state 27

    var                            shift and go to state 39

state 32

    (9) lista_variables -> empty .

    SEMICOLON       reduce using rule 9 (lista_variables -> empty .)


state 33

    (11) var -> ID LEFTSB . INT_CTE RIGHTSB

    INT_CTE         shift and go to state 40


state 34

    (14) metodo -> METHOD tipo_metodo ID inicio_method . LEFTP params RIGHTP LEFTB method_vars bloque RIGHTB end_method

    LEFTP           shift and go to state 41


state 35

    (15) inicio_method -> empty .

    LEFTP           reduce using rule 15 (inicio_method -> empty .)


state 36

    (2) goto_main -> VOID MAIN scopemain . LEFTP RIGHTP LEFTB declara_var bloque RIGHTB

    LEFTP           shift and go to state 42


state 37

    (3) scopemain -> empty .

    LEFTP           reduce using rule 3 (scopemain -> empty .)


state 38

    (7) variables -> VAR tipo var lista_variables SEMICOLON . declara_var
    (5) declara_var -> . empty
    (6) declara_var -> . variables
    (125) empty -> .
    (7) variables -> . VAR tipo var lista_variables SEMICOLON declara_var

    METHOD          reduce using rule 125 (empty -> .)
    VOID            reduce using rule 125 (empty -> .)
    IF              reduce using rule 125 (empty -> .)
    WHILE           reduce using rule 125 (empty -> .)
    RETURN          reduce using rule 125 (empty -> .)
    ID              reduce using rule 125 (empty -> .)
    PRINT           reduce using rule 125 (empty -> .)
    DRAW_DOT        reduce using rule 125 (empty -> .)
    DRAW_LINE       reduce using rule 125 (empty -> .)
    DRAW_CIRCLE     reduce using rule 125 (empty -> .)
    DRAW_TRIANGLE   reduce using rule 125 (empty -> .)
    DRAW_SQUARE     reduce using rule 125 (empty -> .)
    DRAW_RECTANGLE  reduce using rule 125 (empty -> .)
    DRAW_QUADRITERAL reduce using rule 125 (empty -> .)
    RIGHTB          reduce using rule 125 (empty -> .)
    VAR             shift and go to state 8

    declara_var                    shift and go to state 43
    variables                      shift and go to state 6
    empty                          shift and go to state 9

state 39

    (8) lista_variables -> COMMA var . lista_variables
    (8) lista_variables -> . COMMA var lista_variables
    (9) lista_variables -> . empty
    (125) empty -> .

    COMMA           shift and go to state 31
    SEMICOLON       reduce using rule 125 (empty -> .)

    lista_variables                shift and go to state 44
    empty                          shift and go to state 32

state 40

    (11) var -> ID LEFTSB INT_CTE . RIGHTSB

    RIGHTSB         shift and go to state 45


state 41

    (14) metodo -> METHOD tipo_metodo ID inicio_method LEFTP . params RIGHTP LEFTB method_vars bloque RIGHTB end_method
    (19) params -> . empty
    (20) params -> . parametro paraux
    (125) empty -> .
    (23) parametro -> . tipo ID
    (27) tipo -> . INT
    (28) tipo -> . CHAR
    (29) tipo -> . BOOLEAN
    (30) tipo -> . FLOAT
    (31) tipo -> . STRING

    RIGHTP          reduce using rule 125 (empty -> .)
    INT             shift and go to state 15
    CHAR            shift and go to state 17
    BOOLEAN         shift and go to state 18
    FLOAT           shift and go to state 16
    STRING          shift and go to state 19

    tipo                           shift and go to state 46
    parametro                      shift and go to state 47
    params                         shift and go to state 48
    empty                          shift and go to state 49

state 42

    (2) goto_main -> VOID MAIN scopemain LEFTP . RIGHTP LEFTB declara_var bloque RIGHTB

    RIGHTP          shift and go to state 50


state 43

    (7) variables -> VAR tipo var lista_variables SEMICOLON declara_var .

    IF              reduce using rule 7 (variables -> VAR tipo var lista_variables SEMICOLON declara_var .)
    WHILE           reduce using rule 7 (variables -> VAR tipo var lista_variables SEMICOLON declara_var .)
    RETURN          reduce using rule 7 (variables -> VAR tipo var lista_variables SEMICOLON declara_var .)
    ID              reduce using rule 7 (variables -> VAR tipo var lista_variables SEMICOLON declara_var .)
    PRINT           reduce using rule 7 (variables -> VAR tipo var lista_variables SEMICOLON declara_var .)
    DRAW_DOT        reduce using rule 7 (variables -> VAR tipo var lista_variables SEMICOLON declara_var .)
    DRAW_LINE       reduce using rule 7 (variables -> VAR tipo var lista_variables SEMICOLON declara_var .)
    DRAW_CIRCLE     reduce using rule 7 (variables -> VAR tipo var lista_variables SEMICOLON declara_var .)
    DRAW_TRIANGLE   reduce using rule 7 (variables -> VAR tipo var lista_variables SEMICOLON declara_var .)
    DRAW_SQUARE     reduce using rule 7 (variables -> VAR tipo var lista_variables SEMICOLON declara_var .)
    DRAW_RECTANGLE  reduce using rule 7 (variables -> VAR tipo var lista_variables SEMICOLON declara_var .)
    DRAW_QUADRITERAL reduce using rule 7 (variables -> VAR tipo var lista_variables SEMICOLON declara_var .)
    RIGHTB          reduce using rule 7 (variables -> VAR tipo var lista_variables SEMICOLON declara_var .)
    METHOD          reduce using rule 7 (variables -> VAR tipo var lista_variables SEMICOLON declara_var .)
    VOID            reduce using rule 7 (variables -> VAR tipo var lista_variables SEMICOLON declara_var .)


state 44

    (8) lista_variables -> COMMA var lista_variables .

    SEMICOLON       reduce using rule 8 (lista_variables -> COMMA var lista_variables .)


state 45

    (11) var -> ID LEFTSB INT_CTE RIGHTSB .

    COMMA           reduce using rule 11 (var -> ID LEFTSB INT_CTE RIGHTSB .)
    SEMICOLON       reduce using rule 11 (var -> ID LEFTSB INT_CTE RIGHTSB .)


state 46

    (23) parametro -> tipo . ID

    ID              shift and go to state 51


state 47

    (20) params -> parametro . paraux
    (21) paraux -> . empty
    (22) paraux -> . COMMA parametro paraux
    (125) empty -> .

    COMMA           shift and go to state 52
    RIGHTP          reduce using rule 125 (empty -> .)

    empty                          shift and go to state 53
    paraux                         shift and go to state 54

state 48

    (14) metodo -> METHOD tipo_metodo ID inicio_method LEFTP params . RIGHTP LEFTB method_vars bloque RIGHTB end_method

    RIGHTP          shift and go to state 55


state 49

    (19) params -> empty .

    RIGHTP          reduce using rule 19 (params -> empty .)


state 50

    (2) goto_main -> VOID MAIN scopemain LEFTP RIGHTP . LEFTB declara_var bloque RIGHTB

    LEFTB           shift and go to state 56


state 51

    (23) parametro -> tipo ID .

    COMMA           reduce using rule 23 (parametro -> tipo ID .)
    RIGHTP          reduce using rule 23 (parametro -> tipo ID .)


state 52

    (22) paraux -> COMMA . parametro paraux
    (23) parametro -> . tipo ID
    (27) tipo -> . INT
    (28) tipo -> . CHAR
    (29) tipo -> . BOOLEAN
    (30) tipo -> . FLOAT
    (31) tipo -> . STRING

    INT             shift and go to state 15
    CHAR            shift and go to state 17
    BOOLEAN         shift and go to state 18
    FLOAT           shift and go to state 16
    STRING          shift and go to state 19

    parametro                      shift and go to state 57
    tipo                           shift and go to state 46

state 53

    (21) paraux -> empty .

    RIGHTP          reduce using rule 21 (paraux -> empty .)


state 54

    (20) params -> parametro paraux .

    RIGHTP          reduce using rule 20 (params -> parametro paraux .)


state 55

    (14) metodo -> METHOD tipo_metodo ID inicio_method LEFTP params RIGHTP . LEFTB method_vars bloque RIGHTB end_method

    LEFTB           shift and go to state 58


state 56

    (2) goto_main -> VOID MAIN scopemain LEFTP RIGHTP LEFTB . declara_var bloque RIGHTB
    (5) declara_var -> . empty
    (6) declara_var -> . variables
    (125) empty -> .
    (7) variables -> . VAR tipo var lista_variables SEMICOLON declara_var

    IF              reduce using rule 125 (empty -> .)
    WHILE           reduce using rule 125 (empty -> .)
    RETURN          reduce using rule 125 (empty -> .)
    ID              reduce using rule 125 (empty -> .)
    PRINT           reduce using rule 125 (empty -> .)
    DRAW_DOT        reduce using rule 125 (empty -> .)
    DRAW_LINE       reduce using rule 125 (empty -> .)
    DRAW_CIRCLE     reduce using rule 125 (empty -> .)
    DRAW_TRIANGLE   reduce using rule 125 (empty -> .)
    DRAW_SQUARE     reduce using rule 125 (empty -> .)
    DRAW_RECTANGLE  reduce using rule 125 (empty -> .)
    DRAW_QUADRITERAL reduce using rule 125 (empty -> .)
    RIGHTB          reduce using rule 125 (empty -> .)
    VAR             shift and go to state 8

    declara_var                    shift and go to state 59
    variables                      shift and go to state 6
    empty                          shift and go to state 9

state 57

    (22) paraux -> COMMA parametro . paraux
    (21) paraux -> . empty
    (22) paraux -> . COMMA parametro paraux
    (125) empty -> .

    COMMA           shift and go to state 52
    RIGHTP          reduce using rule 125 (empty -> .)

    empty                          shift and go to state 53
    paraux                         shift and go to state 60

state 58

    (14) metodo -> METHOD tipo_metodo ID inicio_method LEFTP params RIGHTP LEFTB . method_vars bloque RIGHTB end_method
    (24) method_vars -> . declara_var
    (5) declara_var -> . empty
    (6) declara_var -> . variables
    (125) empty -> .
    (7) variables -> . VAR tipo var lista_variables SEMICOLON declara_var

    IF              reduce using rule 125 (empty -> .)
    WHILE           reduce using rule 125 (empty -> .)
    RETURN          reduce using rule 125 (empty -> .)
    ID              reduce using rule 125 (empty -> .)
    PRINT           reduce using rule 125 (empty -> .)
    DRAW_DOT        reduce using rule 125 (empty -> .)
    DRAW_LINE       reduce using rule 125 (empty -> .)
    DRAW_CIRCLE     reduce using rule 125 (empty -> .)
    DRAW_TRIANGLE   reduce using rule 125 (empty -> .)
    DRAW_SQUARE     reduce using rule 125 (empty -> .)
    DRAW_RECTANGLE  reduce using rule 125 (empty -> .)
    DRAW_QUADRITERAL reduce using rule 125 (empty -> .)
    RIGHTB          reduce using rule 125 (empty -> .)
    VAR             shift and go to state 8

    declara_var                    shift and go to state 61
    variables                      shift and go to state 6
    empty                          shift and go to state 9
    method_vars                    shift and go to state 62

state 59

    (2) goto_main -> VOID MAIN scopemain LEFTP RIGHTP LEFTB declara_var . bloque RIGHTB
    (25) bloque -> . estatuto bloque
    (26) bloque -> . empty
    (32) estatuto -> . condicion
    (33) estatuto -> . ciclo
    (34) estatuto -> . return
    (35) estatuto -> . lectura
    (36) estatuto -> . escritura
    (37) estatuto -> . llamada SEMICOLON
    (38) estatuto -> . asignacion
    (39) estatuto -> . dibujaPunto
    (40) estatuto -> . dibujaLinea
    (41) estatuto -> . dibujaCirculo
    (42) estatuto -> . dibujaTriangulo
    (43) estatuto -> . dibujaCuadrado
    (44) estatuto -> . dibujaRectangulo
    (45) estatuto -> . dibujaCuadrilatero
    (125) empty -> .
    (64) condicion -> . IF LEFTP condicion1 RIGHTP LEFTB bloque RIGHTB else
    (60) ciclo -> . WHILE salto_ciclo LEFTP exp ciclo1 RIGHTP LEFTB bloque ciclo2 RIGHTB
    (46) return -> . RETURN exp SEMICOLON
    (47) lectura -> . ID ASSIGN READ LEFTP RIGHTP SEMICOLON
    (48) escritura -> . PRINT LEFTP exp RIGHTP SEMICOLON
    (49) llamada -> . ID llamafun LEFTP args RIGHTP
    (56) asignacion -> . ID asigarray
    (105) dibujaPunto -> . DRAW_DOT LEFTP exp COMMA exp COMMA color RIGHTP SEMICOLON
    (106) dibujaLinea -> . DRAW_LINE LEFTP exp COMMA exp COMMA exp COMMA exp COMMA exp COMMA color RIGHTP SEMICOLON
    (107) dibujaCirculo -> . DRAW_CIRCLE LEFTP exp COMMA exp COMMA exp COMMA exp COMMA color RIGHTP SEMICOLON
    (108) dibujaTriangulo -> . DRAW_TRIANGLE LEFTP exp COMMA exp COMMA exp COMMA exp COMMA exp COMMA exp COMMA exp COMMA color RIGHTP SEMICOLON
    (109) dibujaCuadrado -> . DRAW_SQUARE LEFTP exp COMMA exp COMMA exp COMMA exp COMMA color RIGHTP SEMICOLON
    (110) dibujaRectangulo -> . DRAW_RECTANGLE LEFTP exp COMMA exp COMMA exp COMMA exp COMMA exp COMMA color RIGHTP SEMICOLON
    (111) dibujaCuadrilatero -> . DRAW_QUADRITERAL LEFTP exp COMMA exp COMMA exp COMMA exp COMMA exp COMMA exp COMMA exp COMMA exp COMMA exp COMMA color RIGHTP SEMICOLON

    RIGHTB          reduce using rule 125 (empty -> .)
    IF              shift and go to state 87
    WHILE           shift and go to state 68
    RETURN          shift and go to state 63
    ID              shift and go to state 86
    PRINT           shift and go to state 67
